# ithaka

./: README.md  pyproject.toml
docs/: CHANGELOG.md  LICENSE.txt  README.md  requirements.txt
src/: main.py
src/core/: factory.py  strategy.py  tracker.py  utils.py
src/strategies/: bam.py  cta.py  emm.py  far.py  newt.py  stab.py
tests/: test_bam.py  test_cta.py  test_emm.py  test_factory.py  test_far.py  test_newt.py  test_stab.py  test_tracker.py  test_utils.py
