[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ithaka"
version = "1.0.6"
description = "Modular quantitative trading framework for research, backtesting, and portfolio execution."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "requests",
    "yfinance",
    "ib-insync",
    "mysql-connector-python",
    "beautifulsoup4",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "dash",
    "plotly",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]